# Bismuth

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
contribute/systemd/: bismuth.service  bismuth.timer  check.sh  install.sh  list.sh  log.sh  test.sh
src/: args.rs  main.rs
