[package]
name = "bismuth"
version = "1.4.0"
edition = "2021"
description = "A Rust cli util to set your desktop wallpaper to the newest 'Bing Image Of The Day'."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.8", features = ["derive"] }
notify-rust = "4.9.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["io"] }
directories = "5.0.1"
Inflector = { version = "0.11.4", default-features = false }
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.10.1"
